<resources>
    <string name="app_name">2080</string>

    <!--    navigation_menu-->
    <string name="nav_site">سایت 2080</string>
    <string name="nav_saved">برگزیده ها</string>
    <string name="nav_my_ravandnama">روندنمای من</string>
    <string name="nav_karsanj">کارسنج</string>
    <string name="login">ورود</string>
    <string name="btnlogon">ورود</string>
    <string name="todo">TODO</string>
    <string name="sabtnam">ثبت نام</string>
    <string name="password">رمز عبور</string>
    <string name="phone_number">شماره موبایل</string>
    <string name="register_button_main">ثبت نام (ظرفیت محدود)</string>

    <string name="bottom_menu_1">خانه</string>
    <string name="bottom_menu_2">مشاوره</string>
    <string name="bottom_menu_3">فروشگاه</string>
    <string name="bottom_menu_4">تنظیمات</string>
    <string name="moshaver_ad_article">اگه در جستجوی بهترین مشاور کنکور هستید و به یک برنامه درسی خوب برای کنکور همراه با پیگیری مداوم و مشاوره کنکور بلند مدت نیاز دارید، حتما خدمات گروه آموزشی ۲۰۸۰ را بررسی کنید تا وقت و هزینه خود را با انتخاب یک مشاور نامعتبر هدر ندهید.

روش کار و شرایط مشاوره:
پس از ثبت نام مشاوره و برنامه ریزی بلند مدت و کوتاه مدت، دوره مشاوره خصوصی کنکور برای شما آغاز می شود و طی این مدت مشاور ما در زمینه های مختلفی به شما کمک خواهد کرد و پاسخگوی سوالات شما خواهد بود از جمله:

 ارائه برنامه درسی منظم و شخصی سازی شده بر اساس شرایط و وضعیت شما،

 گرفتن گزارش کار مداوم (گزارش مطالعه) از شما،

 تحلیل کارنامه آزمون های آزمایشی شما و راه های افزایش تراز،

 مشاوره انگیزشی کنکور و راهکارهای افزایش ساعت مطالعه شما،

 معرفی منابع کمک درسی برای هر درس،

 آموزش روش مطالعه هر درس با جزئیات کامل،

 بالا بردن کیفیت مطالعه شما،

 هدف گذاری های کوتاه و بلند مدت بر اساس وضعیت فعلی شما،

 ایجاد تعادل مطالعه بین درس های مختلف،

  تعادل مطالعه تشریحی و تستی،

 روش های تست زنی در منزل و در جلسه آزمون،

 مدیریت زمان، پیشرفت در آزمون های آزمایشی و ارزیابی آزمون

 آموزش روش خلاصه نویسی هر درس،

 روش مرور مطالب هر درس،

 روش درس خواندن در ایام خاص مثل تابستان، عید نوروز، ماه رمضان، آزمون های مبحثی، دوران جمع بندی کنکور و …

 جواب دادن به کلیه سوالات و ابهامات شما

روش درس خواندن برای کنکور باید درست و اصولی و طبق برنامه ریزی دقیق درسی باشد. برای موفقیت در کنکور، حداقل یک سال (۳۶۵ روز) تلاش می کنید. اگر حتی یک اشتباه کوچک در مسیر درس خواندن شما وجود داشته باشد، این اشتباه تا روز برگزاری کنکور ۳۶۵ بار تکرار می شود. تکرار هر روز یک اشتباه کوچک، نهایتا یک نتیجه بزرگ و منفی به همراه خواهد داشت.

به همین دلیل است که اکثر داوطلبان کنکور پیشرفتی در آزمون های آزمایشی ندارند و چندین سال پشت کنکور می مانند و از ورود به رشته و دانشگاه مورد علاقه خود باز می مانند. عمل به توصیه های یک مشاور کنکور خوب و دلسوز که تجربه موفقیت در کنکور را داشته مانع تکرار این اشتباهات و مانع اتلاف وقت شما خواهد شد.

سال کنکور سال حساسی است و شما فرصتی برای آزمون و خطا در این سال سرنوشت ساز ندارید. به ویژه در چند سال اخیر با افزایش چشمگیر تعداد داوطلبان کنکور و سخت تر شدن سوالات، رقابت برای قبولی در کنکور سنگین تر شده و اهمیت داشتن مشاور کنکور به منظور برطرف کردن اشتباهات و قرار گرفتن در مسیر درست مطالعه افزایش یافته است.

مشاورین گروه آموزشی ۲۰۸۰ به عنوان دوست دلسوز شما در این برهه حساس و سرنوشت ساز همراه هر روز شما خواهند بود و با ارائه خدمات مشاوره تضمینی کنکور به شما کمک خواهند کرد تا در بهترین راه قدم گذاشته و هیچ وقت حسرت گذشته را نخورید.</string>
    <string name="ad_title">لیست پخش</string>
    <string name="channel_description">description for notif</string>
    <string name="channel_name">name for notif</string>
    <string name="bottom_menu_5">۲۰۸۰ من</string>
    <string name="chart_info">در نرم افزار ۲۰۸۰ شما میتوانید مجموع ساعت مطالعاتی خود را ببنید. وقتی شروع به مطالعه کردید دکمه شروع و وقتی که زمان مطالعه شما به پایان رسید دکمه پایان را بزنید. در این زمان اخرین زمان مطالعاتی شما به نمودار اضاقه خواهد شد. دقت کنید زمان ها به دقیقه وارد نمودار میشوند.تا زمانیکه نوتیفیکیشن نرم افزار در نوتیفیکیشن بار نمایش داده میشود تایمر در حال کار کردن است و برای توقف باید وارد نرم افزار شوید و دکمه توقف را کلیک کنید. موفق باشید.</string>
    <string name="frag_two_call_to_consult">برای صحبت با مشاور و کسب اطلاعات بیشتر لطفا رو دکمه زیر کلیک کرده و دکمه ارسال را بزنید تا بطور مستقیم با مشاور صحبت کنید.</string>

</resources>